tests/run/error_infer_none.out
tests/run/error_infer_none.em:4:13: error: cannot infer the type arguments here; add a type annotation
